# velo

./: .gitignore  Cargo.toml  README.md
measurements/: generate_plot.py  generate_tables.py  process_data.py
src/: explorer.rs  lib.rs  performance.rs  scenario.rs  utils.rs
src/algorithms/: apsp_k1.rs  dijkstra.rs  mod.rs  shortest_path_dag.rs  shortest_path_tree.rs  topology.rs
src/analysis/: find_worst_case.rs  mod.rs  pecs.rs  state_aware_clustering.rs  traffic_variability.rs
src/tests/: ingress_analysis.rs  mod.rs
src/traffic_matrix/: cluster.rs  clustering.rs  mod.rs  sampler.rs
