[package]
name = "velo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bgpsim = { version = "0.18.0", features = ["rand_queue", "topology_zoo"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
maplit = "1.0.2"
petgraph = "0.6.3"
pretty_env_logger = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"
thiserror = "1.0.40"
serde = { version = "1", features = ["derive"] }
rand_distr = "0.4.3"
ordered-float = "4.1.1"
indicatif = { version = "0.17.7", features = ["rayon"] }
bimap = "0.6.3"
fixedbitset = "0.4.2"
ndarray = "0.15.6"
strum = { version = "0.26.1", features = ["strum_macros", "derive"] }
approx = "0.5.1"
csv = "1.3.0"
time = { version = "0.3.34", features = ["formatting"] }
crossbeam = "0.8.4"
anstyle = "1.0.6"
ahash = "0.8.11"

# parsing traffic matrix
flate2 = "1.0.33"
clap = { version = "4.5.17", features = ["derive"] }

# QARC stuff
good_lp = { version = "1.8.1", default-features = false, features = ["lp-solvers"] }
uuid = { version = "1.8.0", features = ["v4"] }
either = "1.13.0"
tar = "0.4.41"
pyo3 = "0.23"
numpy = "0.23"
smallvec = "1.13.2"
plotly = "0.11.0"


[dev-dependencies]
proptest = "1.1.0"
